[workspace]
members = [
  "runtime_v1",
  "use_v1_tween",
  "runtime_v2",
  "use_v2_tween",
  "use_v2_keyevent",
  "runtime_v3",
  "use_v3_tween",
  "use_v3_keyevent",
  "use_v3_keyevent_2",
  "use_v3_task_order",
  "runtime_v4",
  "use_v4_task_order",
  "use_v4_tween",
  "runtime_v5",
  "use_v5_thread_id",
  "use_v5_cli_game",
  "use_v5_cli_game_2",
  "runtime_v6",
  "use_v6_cli_game",
]
