[package]
name = "use_v1_tween"
version = "0.1.0"
authors = ["Orito Itsuki <20170107+MatchaChoco010@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime_v1 = { path = "../runtime_v1" }
termion = "1.5.5"
futures = "0.3.8"
