[package]
name = "use_v2_tween"
version = "0.1.0"
authors = ["Orito Itsuki <20170107+MatchaChoco010@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime_v2 = { path = "../runtime_v2" }
crossterm = "0.19.0"
futures = "0.3.8"
