[package]
name = "use_v5_cli_game_2"
version = "0.1.0"
authors = ["Orito Itsuki <20170107+MatchaChoco010@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
futures = "0.3.8"
rand = "0.8.1"
runtime_v5 = { path = "../runtime_v5" }
