[package]
name = "use_v6_cli_game"
version = "0.1.0"
authors = ["Orito Itsuki <20170107+MatchaChoco010@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
futures = "0.3.9"
rand = "0.8.1"
runtime_v6 = { path = "../runtime_v6" }
